--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -39,7 +39,7 @@
                 // background-color: #af415375;
                 font-weight: 300;
                 text-align: center;
-                font-size: 1.5rem;
+                font-size: 1.35rem;
             }
     
             .half{
@@ -127,7 +127,7 @@
                 // background-color: #af415375;
                 font-weight: 300;
                 text-align: center;
-                font-size: 1.5rem;
+                font-size: 1.35rem;
             }
             .lluviaText{
                 display: grid;
@@ -409,7 +409,7 @@
     
                 .lluviaTitle{ 
                     margin-bottom: .75rem;
-                    font-size: 1.5rem;
+                    // font-size: 1.5rem;
                 }
                 .lluviaText{
                     font-weight: 300;
