--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -1564,9 +1564,9 @@ li {
 }
 .sctn4 .sctn-2_flowers {
   z-index: 100;
-  width: 43.5%;
+  width: 42.5%;
   bottom: 0;
-  right: -4%;
+  right: -9%;
   animation: hole_flowers 30s alternate infinite ease-in;
   transform-origin: center bottom;
 }
@@ -1699,14 +1699,14 @@ li {
     transform: rotate(-3deg);
   }
 }
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 400px) {
   .sctn4 {
     margin-top: 0rem;
     height: 70vh;
   }
   .sctn4 .form {
     width: 75%;
-    padding: 4.5rem 1rem;
+    padding: 2.75rem 1rem;
     gap: 2.75rem 1.5rem;
   }
   .sctn4 .form .messageImg {
@@ -1773,7 +1773,109 @@ li {
   .sctn4 .sctn-2_flowers {
     width: 35%;
     bottom: 0;
-    right: -4%;
+    right: -5%;
+  }
+  .sctn4 .up_flower {
+    width: 80%;
+    top: 5%;
+    right: -53%;
+  }
+  .sctn4 .veryPink {
+    width: 50%;
+    right: -35%;
+    bottom: -2%;
+  }
+  .sctn4 .veryPink2 {
+    width: 70%;
+    left: -10%;
+    bottom: 2%;
+  }
+  .sctn4 .veryPink3 {
+    width: 60%;
+    left: -20%;
+    top: 2%;
+  }
+  .sctn4 .veryPink4 {
+    width: 65%;
+    right: -20%;
+    top: -2%;
+  }
+}
+@media screen and (min-width: 500px) {
+  .sctn4 {
+    margin-top: 0rem;
+    height: 70vh;
+  }
+  .sctn4 .form {
+    width: 75%;
+    padding: 2.75rem 1rem;
+    gap: 2.75rem 1.5rem;
+  }
+  .sctn4 .form .messageImg {
+    width: 70%;
+  }
+  .sctn4 .form .form_title {
+    font-size: 1.65rem;
+  }
+  .sctn4 .form .singlePerson .onlyNameGuest {
+    font-size: 1.75rem;
+  }
+  .sctn4 .form .singlePerson .check .form_description {
+    font-size: 1.25rem;
+  }
+  .sctn4 .form .singlePerson .check .selection-number {
+    margin-top: 2rem;
+    width: 70%;
+    font-size: 1.25rem;
+    padding: 0.75rem 1rem;
+  }
+  .sctn4 .form .singlePerson .hide-checkMark {
+    display: none;
+  }
+  .sctn4 .form .singlePerson .type-list {
+    display: grid;
+    place-items: center;
+  }
+  .sctn4 .form .singlePerson .type-list .goBack {
+    margin-bottom: 1.5rem;
+  }
+  .sctn4 .form .singlePerson .type-list .goBack .arrow {
+    width: 2rem;
+    height: 2rem;
+  }
+  .sctn4 .form .singlePerson .type-list .list-people {
+    width: 95%;
+    margin-bottom: 0.75rem;
+  }
+  .sctn4 .form .singlePerson .type-list .list-name {
+    display: grid;
+    place-items: center;
+    gap: 1.25rem;
+  }
+  .sctn4 .form .singlePerson .type-list .list-name .guest1 {
+    font-size: 1rem;
+    height: 2rem;
+    width: 15.35rem;
+  }
+  .sctn4 .form .singlePerson .type-list .btn-confirm {
+    all: unset;
+    margin-top: 2rem;
+    width: 70%;
+    font-size: 1.25rem;
+    padding: 0.75rem 1rem;
+  }
+  .sctn4 .form .singlePerson .lst-hide {
+    display: none;
+  }
+  .sctn4 .flower-container-2 {
+    width: 15%;
+    bottom: -10%;
+    left: 5%;
+  }
+  .sctn4 .sctn-2_flowers {
+    width: 35%;
+    bottom: 0;
+    right: -10%;
   }
   .sctn4 .up_flower {
     width: 80%;
