--- a/src/style/sass/main_components/section4.scss
+++ b/src/style/sass/main_components/section4.scss
@@ -325,9 +325,9 @@
     
     .sctn-2_flowers{
         z-index: 100;
-        width: 43.5%;
+        width: 42.5%;
         bottom: 0;
-        right: -4%;
+        right: -9%;
         animation: hole_flowers 30s alternate infinite ease-in;
         transform-origin: center bottom;
 
@@ -483,14 +483,14 @@
 }
 
 
-@media screen and (min-width:500px) {
+@media screen and (min-width:400px) {
     .sctn4{
         margin-top: 0rem;
         height: 70vh;
     
         .form{
             width: 75%;
-            padding: 4.5rem 1rem;
+            padding: 2.75rem 1rem;
             gap: 2.75rem  1.5rem;
     
             .messageImg{
@@ -582,7 +582,137 @@
         .sctn-2_flowers{
             width: 35%;
             bottom: 0;
-            right: -4%;
+            right: -5%;
+        }
+        .up_flower{
+            width: 80%;
+            top: 5%;
+            right: -53%;
+        }
+    
+        .veryPink{
+            width: 50%;
+            right: -35%;
+            bottom: -2%;
+        }
+        .veryPink2{
+            width: 70%;
+            left: -10%;
+            bottom: 2%;
+        }
+        .veryPink3{
+            width: 60%;
+            left: -20%;
+            top: 2%;
+        }
+        .veryPink4{
+            width: 65%;
+            right: -20%;
+            top: -2%;
+        }
+    }
+}
+
+@media screen and (min-width:500px) {
+    .sctn4{
+        margin-top: 0rem;
+        height: 70vh;
+    
+        .form{
+            width: 75%;
+            padding: 2.75rem 1rem;
+            gap: 2.75rem  1.5rem;
+    
+            .messageImg{
+                width: 70%;
+            }
+    
+            .form_title{
+                font-size: 1.65rem;            
+            }
+    
+            .singlePerson{
+                .onlyNameGuest{
+                    font-size: 1.75rem;
+                }
+                        .check{
+                            .form_description{
+                                font-size: 1.25rem;
+                            }
+                
+                            .selection-number{  // thi is a button
+                                // display: inline-block;
+                                margin-top: 2rem;
+                                width: 70%;
+                                font-size: 1.25rem;
+                                padding: .75rem 1rem;
+                            }
+                
+                        }
+                
+                        .hide-checkMark{
+                            display:none;
+                        }
+                
+                
+                        .type-list{
+                            display: grid;
+                            place-items: center;
+                
+                            .goBack{
+                                margin-bottom: 1.5rem;
+                                .arrow{
+                                    width: 2rem;
+                                    height: 2rem;
+                                }
+                
+                            }
+                
+                
+                            .list-people{
+                                width: 95%;
+                                margin-bottom: .75rem;
+                            }
+                
+                            .list-name{
+                                display: grid;
+                                place-items: center;
+                                gap: 1.25rem;
+                                
+                                .guest1{
+                                    font-size: 1rem;
+                                    height: 2rem;
+                                    width: 15.35rem;
+                                }
+                            }
+                                
+                            .btn-confirm{
+                                all: unset;
+                                margin-top: 2rem;
+                                width: 70%;
+                                font-size: 1.25rem;
+                                // color:$text-color;
+                                padding: .75rem 1rem;
+                            }
+                        }
+                
+                        .lst-hide{
+                            // visibility: hidden;
+                            display: none;
+                        }
+
+            }
+        }
+        .flower-container-2{
+            width: 15%;
+            bottom: -10%;
+            left: 5%;
+        }
+        
+        .sctn-2_flowers{
+            width: 35%;
+            bottom: 0;
+            right: -10%;
         }
         .up_flower{
             width: 80%;
