--- a/src/style/sass/main_components/section2.scss
+++ b/src/style/sass/main_components/section2.scss
@@ -96,6 +96,7 @@
             .couple{
                 width: 115%;
                 opacity: .8; 
+                user-select: none;
             }
             .anim{
                 opacity: 0;
