--- a/src/style/sass/main_components/section1.scss
+++ b/src/style/sass/main_components/section1.scss
@@ -338,7 +338,15 @@
                     .recepBold, .boldHora{
                         font-weight: 400;
                     }
-                    
+                    .pm{
+                        text-transform: lowercase;
+
+                    }
+                    // .boldHora{
+                    //     text-transform: lowercase;
+
+                    // }
+                     
                 }
             }
         }
