--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -139,6 +139,7 @@
                     margin-top: .5rem;
                     .numaccount{
                         font-weight: 400;
+                        text-decoration: none;
                     }
                 }
 
