--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -22,7 +22,7 @@
             // height: min-content;
             place-items: center;
             width: 80%;
-            padding: 2rem 1rem;
+            padding: 1.5rem 1rem;
             opacity: 0;
     
             .dress_icon{
@@ -93,7 +93,8 @@
                 }
             }
             .reserva_color{
-                margin-top: 2rem;
+                margin-top: .5rem;
+                text-align: center;
             }
             
             
@@ -111,7 +112,7 @@
             // height: min-content;
             place-items: center;
             width: 80%;
-            padding: 2rem 1rem;
+            padding: 1.5rem 1rem;
             opacity: 0;
             .envelope{
                 fill: $text-color;
@@ -394,7 +395,7 @@
                     font-size: 1.25rem;
                 }
                 .reserva_color{
-                    margin-top: 2.25rem;
+                    margin-top: 1rem;
                 }
                 
             
@@ -402,7 +403,7 @@
         
             .lluviaSobres{
                 width: 75%;;
-                padding: 2rem 1rem;
+                // padding: 2rem 1rem;
                 .envelope{
                     width: 2.75rem;
                     padding: .5rem 0 .5rem;
