--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -121,7 +121,7 @@
             }
 
             .lluviaTitle{
-                margin-bottom: 2.125rem;
+                // margin-bottom: 1.5rem;
                 width: 100%;
                 padding: .5rem 1rem;
                 background-color: #f3adb9;
@@ -410,7 +410,7 @@
                 }
     
                 .lluviaTitle{ 
-                    margin-bottom: .75rem;
+                    margin-bottom: .5rem;
                     // font-size: 1.5rem;
                 }
                 .lluviaText{
