lista de invitados actualizada

--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -6,3 +6,4 @@
 @use 'main_components/section4';
 @use 'main_components/section5';
 @use 'main_components/asistencia';
+@use 'main_components/error';
