--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -2070,4 +2070,13 @@ li {
   width: min-content;
 }
 
+.main-404 {
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+.main-404 .h1-404 {
+  font-family: "Work Sans";
+}
+
 /*# sourceMappingURL=main.css.map */
